# OTP-storage-backend

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: main.py
